--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./app.js"
+    "start": "node ./app.js",
+    "start dev": "docker-compose up && npm start"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +18,8 @@
     "axios": "^1.3.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "redis": "^4.6.4"
   },
   "devDependencies": {
     "eslint": "^8.33.0"
