--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,12 @@
+version: '3.4'
+
 services:
-  redis:
-    image: redis:latest
+  webcat:
+    image: webcat
+    build:
+      context: .
+      dockerfile: ./Dockerfile
+    environment:
+      NODE_ENV: production
     ports:
-      - 6379:6379
+      - 3000:3000
